--- a/RoL/rol.css
+++ b/RoL/rol.css
@@ -1,30 +1,104 @@
-body {
-  background-color: lightblue;
+.charsheet {
+    background-color: aliceblue;
+    border: 0px;
+    color:black;
+    width: 840px;
+	margin: 2px;
 }
 
-h1 {
-  color: navy;
-  margin-left: 20px;
+.dummy{
+	/*incase BOM decides to screw up css */
+}
+
+input[type="text"] {
+  background-color: transparent;
+  border-style: none none solid none;
+  border-color: grey;
+}
+
+input[type="number"] {
+  background-color: transparent;
+  border-style: none none solid none;
+  border-color: grey;
+  width: 3em;
+}
+
+input.sheet-bio-input {
+	width:70%;
+}
+
+textarea {
+    background-color: transparent;
+	width: 80%;
+    margin: 0 0 0 0;
+	resize: none;
+	background-attachment: local;
+    background-image:
+	linear-gradient(to right, aliceblue 10px, transparent 10px),
+	linear-gradient(to left, aliceblue 10px, transparent 10px),
+	repeating-linear-gradient(aliceblue, aliceblue 30px, #ccc 30px, #ccc 31px, aliceblue 31px);
+    line-height: 31px;
+    padding: 8px 8;
+	border: 0px;
+}
+
+input[type="checkbox"].sheet-checkbox {
+  border-style: solid black;
+  border-radius: 0px;
+}
+
+h4.sheet-section-head {
+   color: white;
+   background-color: midnightblue;
+   padding-left: 2px;
+   padding-right: 2px;
+   margin: 1px;
+   text-align: left;
+   vertical-align: top;
+   font-weight: normal;
+   font-style: normal;
+   height: 1.5em;
+}
+
+
+label.sheet-short-label {
+   display: inline-block;
+   width: 4.5em;
+   vertical-align: top;
+   margin-left: 2px;
+}
+
+label.sheet-bio-label {
+   display: inline-block;
+   width: 7em;
+   vertical-align: top;
+   margin-left: 2px;
 }
 
 .charsheet .sheet-grid-section{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows:  2fr 1fr;
-  grid-template-areas:"portrait portrait bio bio stats stats"
-                      "portrait portrait bio bio sup sup";
-  grid-gap: 5px;
+  grid-template-rows:  2fr 1fr 1fr 1fr 2fr 1fr 1fr 1fr;
+  grid-template-areas:"bio bio bio bio stats stats"
+                      "notes notes notes notes sup sup"
+					  "advantages advantages advantages advantages advantages advantages"
+					  "common common expert expert combat combat"
+                      "common common expert expert damage damage"
+					  "weapons weapons weapons weapons weapons weapons"
+					  "magic magic magic magic magic magic";
+  grid-gap: 2px;
+}
+
+.charsheet div.sheet-header{
+  display: flex;
+  padding: 0px;
+  border: 0px;
 }
 
 .charsheet div.sheet-block{
   display: grid;
-  justify-content: center;
-  padding: 5px;
-  border: 3px solid black;
-}
-
-.charsheet div.sheet-portrait{
-  grid-area: portrait;
+  padding: 0px;
+  border: 1px solid lightsteelblue;
 }
 
 .charsheet div.sheet-bio{
@@ -37,4 +111,36 @@ h1 {
 
 .charsheet div.sheet-sup{
   grid-area: sup;
+}
+
+.charsheet div.sheet-notes{
+  grid-area: notes;
+}
+
+.charsheet div.sheet-advantages{
+  grid-area: advantages;
+}
+
+.charsheet div.sheet-common{
+  grid-area: common;
+}
+
+.charsheet div.sheet-expert{
+  grid-area: expert;
+}
+
+.charsheet div.sheet-combat{
+  grid-area: combat;
+}
+
+.charsheet div.sheet-damage{
+  grid-area: damage;
+}
+
+.charsheet div.sheet-weapons{
+  grid-area: weapons;
+}
+
+.charsheet div.sheet-magic{
+  grid-area: magic;
 }
