--- a/RoL/rol.css
+++ b/RoL/rol.css
@@ -42,6 +42,11 @@ textarea {
 	border: 0px;
 }
 
+.sheet-textarea-div{
+    width: 95%;
+}
+
+
 input[type="checkbox"].sheet-checkbox {
   border-style: solid black;
   border-radius: 0px;
