added sheet worker for half stats and improved stats roles/template

--- a/RoL/rol.css
+++ b/RoL/rol.css
@@ -12,24 +12,34 @@
 
 
 /* roll template */
+
+.sheet-rolltemplate-rol-percent div.sheet-template-charname {
+    border: 0px;
+    padding: 5px;
+    font-weight: bold;
+    font-style: italic;
+}
+
 .sheet-rolltemplate-rol-percent div.sheet-template-container {
 	border: 2px solid #000 !important;
 	border-radius: 3px 3px 3px 3px;
 }
-.sheet-rolltemplate-rol-percent .sheet-template-header {
+.sheet-rolltemplate-rol-percent .sheet-template-rollname {
 	background-color: rgba(112, 32, 130,1);
 	color: white;
 	padding: 2px;
 	border-bottom: 1px solid black;
 	line-height: 1.6em;
 	font-size: 1.2em;
+	font-weight: bold;
 }
-.sheet-rolltemplate-rol-percent .sheet-template-value {
+
+.sheet-rolltemplate-rol-percent .sheet-template-values {
     background-color: lightgrey;
 	padding: 5px;
 	border-bottom: 1px solid black;
-	font-weight: bold;
 }
+
 .sheet-rolltemplate-rol-percent .sheet-template-result {
     background-color: white;
 	padding: 5px;
@@ -42,7 +52,19 @@
 	min-width: 1.5em;
 	text-align: center;
 	border: 0px;
-	background-color: rgba(217, 217, 214,1);
+	background-color: rgba(0, 0, 0,0);
+}
+
+.sheet-rolltemplate-rol-percent .sheet-template-failure {
+    color: red;
+}
+
+.sheet-rolltemplate-rol-percent .sheet-template-success {
+    color: green;
+}
+
+.sheet-rolltemplate-rol-percent .sheet-template-hard {
+    color: black;
 }
 
 /* Inputs */
