--- a/RoL/rol.css
+++ b/RoL/rol.css
@@ -26,7 +26,7 @@
 	border-radius: 3px 3px 3px 3px;
 }
 .sheet-rolltemplate-rol-percent .sheet-template-rollname {
-	background-color: rgba(112, 32, 130,1);
+	background-color: darkblue;
 	color: white;
 	padding: 2px;
 	border-bottom: 1px solid black;
@@ -171,7 +171,7 @@ label.sheet-long-label {
 .sheet-hint-long-label {
     font-size: 0.5em;
     font-style: italic;
-    margin-left: 150px;
+    margin-left: 125px;
     vertical-align: top;
 }
 
