--- a/RoL/rol.css
+++ b/RoL/rol.css
@@ -70,6 +70,8 @@
 
 /* ==== Inputs ==== */
 
+
+
 .sheet-textarea-div{
     width: 95%;
 }
@@ -131,7 +133,7 @@ textarea.sheet-damage-description  {
 	font-size: 12px;
 	background-image: none;
 	margin-left: 2px;
-	margin-right: 2px;
+	width: 98%;
 }
 
 input[type="checkbox"].sheet-checkbox {
@@ -141,6 +143,35 @@ input[type="checkbox"].sheet-checkbox {
 
 input.sheet-adv-input {
     width: 99%;
+}
+
+
+.charsheet button.sheet-dice {
+  border: none;
+  border: 1px solid lightgrey;
+  box-shadow: inset 0 1px 0 rgb(255 255 255 / 20%), 0 1px 2px rgb(0 0 0 / 5%);
+  background-image: linear-gradient(to bottom, #FFFFFF , #e6e6e6);
+  font-size: 1.3em;
+  text-align: center;
+  padding: 4px;
+  margin: 4px 2px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.charsheet button.sheet-dice:after {
+    font-family: dicefontd20;
+    content:'t';    
+}
+
+.charsheet button.sheet-dice:hover {
+    background-image: linear-gradient(to bottom, #e6e6e6 , #e6e6e6);
+}
+
+.charsheet button.sheet-dice:active {
+    background-image: none;
+    box-shadow: inset 0 2px 4px rgb(0 0 0 / 15%), 0 1px 2px rgb(0 0 0 / 5%);
+    background-color: #e6e6e6;
 }
 
 
