--- a/RoL/rol.css
+++ b/RoL/rol.css
@@ -106,8 +106,14 @@ input[type="number"] {
   width: 3em;
 }
 
-input.sheet-bio-input {
-	width:70%;
+
+
+input.sheet-text-long {
+	width:380px;
+}
+
+input.sheet-text-short {
+	width:100px;
 }
 
 input[type="text"].sheet-damage-status  {
@@ -161,7 +167,15 @@ input.sheet-adv-input {
     width: 99%;
 }
 
+input.sheet-expert-skill {
+    width: 115px;
+    font-weight: bold;
+    margin-left: 5px;
+    margin-right: 10px;
+}
 
+/* no longer needed */
+/*
 .charsheet button.sheet-dice {
   border: none;
   border: 1px solid lightgrey;
@@ -190,7 +204,7 @@ input.sheet-adv-input {
     background-color: #e6e6e6;
 }
 
-
+*/
 
 /* ==== General section stuff  ==== */
 
@@ -217,9 +231,23 @@ div.sheet-section-row {
     vertical-align: top;
 }
 
+div.sheet-section-col2-left {
+    width: 50%;
+    float: left;
+    margin-right: 5px;
+    padding: 0px;
+}
+
+div.sheet-section-col2right {
+    width: 50%;
+    float: right;
+    margin-left: 5px;
+    padding: 0px;
+}
+
 label.sheet-short-label {
    display: inline-block;
-   width: 4.5em;
+   width: 50px;
    vertical-align: middle;
    margin-left: 5px;
    margin-bottom: 0px;
@@ -228,7 +256,7 @@ label.sheet-short-label {
 
 label.sheet-long-label {
    display: inline-block;
-   width: 8em;
+   width: 100px;
    vertical-align: middle;
    margin-left: 5px;
    margin-bottom: 0px;
@@ -240,6 +268,15 @@ label.sheet-long-label {
     font-style: italic;
     margin-left: 80px;
     vertical-align: top;
+}
+
+label.sheet-medium-label {
+   display: inline-block;
+   width: 100px;
+   vertical-align: middle;
+   margin-left: 5px;
+   margin-bottom: 0px;
+   font-size: 1em;
 }
 
 .sheet-hint-long-label {
@@ -281,18 +318,10 @@ label.sheet-long-label {
 
 /* ==== Section specific ==== */
 
-label.sheet-bio-label {
-   display: inline-block;
-   width: 7em;
-   vertical-align: middle;
-   margin-left: 5px;
-   margin-bottom: 0px;
-   font-size: 1em;
-}
-
 .sheet-adv-div {
     margin-left: 10px;    
 }
+
 
 /* ==== Grid definition ==== */
 .charsheet .sheet-grid-section{
